Adding checkstyle & google java format support